styles.css
/* 



Baby Blue: #A7C7E7
Black: #4F4F4F 
White: #FFFFFF
Red: #F4A7A7 

Baby Blue: #5EC3F2
Black: #000000
White: #FFFFFF
Red: #FF3333

Baby Blue: #7DB9E8
Black: #2A2A2A
White: #F1F1F1
Red: #D26D6D

Baby Blue: #A3C9D7
Black: #333333
White: #FAF9F9
Red: #8C3B3B

Baby Blue: #B0D9F3
Black: #4F4F4F
White: #FFFFFF
Red: #F1A7A7

*/

body {
  background-color: black;
}

*,
*::after,
*::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: 62.5%;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

.wrapper {
  /* border: 1px solid black; */

  display: flex;
  justify-content: center;
  align-items: center;
  height: 100dvh;
}

.card {
  border: 1px solid black;
  width: 40%;
  height: 60%;
  border-radius: 10px;

  display: flex;
  align-items: center;
  justify-content: center;

  /* background-image: url("./imgs/flower-pattern.png");
  background-size: contain;
  background-repeat: repeat;
  background-position: center center; */
  position: relative;
  /* overflow: hidden; */
}

.card::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(240, 128, 128, 0.4);
}

.btn {
  font-size: 2.4rem;
  padding: 1rem 3rem;
  background-color: lightblue;
  /* border: none; */
  border-radius: 10px;
  cursor: pointer;

  box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.8);
  transition: all 0.3s;
  z-index: 10;
}

.btn:hover {
  transform: translateY(-3px);
  box-shadow: 10px 10px 10px rgb(0, 0, 0, 0.5);
}

.btn:active {
  transform: translateY(5px);
  box-shadow: 5px 5px 10px rgb(0, 0, 0, 1);
}

.animal {
  position: absolute;
  bottom: 100px;
  /* left: calc(768px - 33px); */
  left: 0;
  width: 33px;
  height: 33px;

  background-image: url("./imgs/cat-frames/cat-right-1.png");
  background-repeat: no-repeat;
  z-index: 100;

  transition: all 10s;
}

@keyframes walk-right-frames {
  0% {
    background-image: url("./imgs/cat-frames/cat-right-1.png");
  }
  50% {
    background-image: url("./imgs/cat-frames/cat-right-2.png");
  }
  100% {
    background-image: url("./imgs/cat-frames/cat-right-3.png");
  }
}

@keyframes walk-left-frames {
  0% {
    background-image: url("./imgs/cat-frames/cat-left-1.png");
  }
  50% {
    background-image: url("./imgs/cat-frames/cat-left-2.png");
  }
  100% {
    background-image: url("./imgs/cat-frames/cat-left-3.png");
  }
}

@keyframes walk-up-frames {
  0% {
    background-image: url("./imgs/cat-frames/cat-up-1.png");
  }
  50% {
    background-image: url("./imgs/cat-frames/cat-up-2.png");
  }
  100% {
    background-image: url("./imgs/cat-frames/cat-up-3.png");
  }
}

@keyframes walk-up-frames {
  0% {
    background-image: url("./imgs/cat-frames/cat-down-1.png");
  }
  50% {
    background-image: url("./imgs/cat-frames/cat-down-2.png");
  }
  100% {
    background-image: url("./imgs/cat-frames/cat-down-3.png");
  }
}

